fix: build errors in frontend (LazyImage and AdminTable)